--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,7 @@
 {
   "MainPage": "Главная",
-  "Translate": "Поменять язык"
+  "ReloadThisPage": "Перезагрузить страницу",
+  "SomethingWentWrong": "Что-то пошло не так...",
+  "Translate": "Поменять язык",
+  "throwError": "Вызвать ошибку"
 }
