--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,7 @@
 {
   "MainPage": "Main Page",
-  "Translate": "Change language"
+  "ReloadThisPage": "Reload this page",
+  "SomethingWentWrong": "Something went wrong...",
+  "Translate": "Change language",
+  "throwError": "Throw error"
 }
