--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,5 +3,8 @@
   "ReloadThisPage": "Перезагрузить страницу",
   "SomethingWentWrong": "Что-то пошло не так...",
   "Translate": "Поменять язык",
-  "throwError": "Вызвать ошибку"
+  "throwError": "Вызвать ошибку",
+  "Toggle": "Toggle",
+  "MainPageLink": "Главная",
+  "AboutPageLink": "О сайте"
 }
