Updated Sidebar, LangSwitcher
Added html regression report tool

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,5 +5,6 @@
   "ReloadThisPage": "Reload this page",
   "SomethingWentWrong": "Something went wrong...",
   "Translate": "Change language",
+  "TranslateShort": "En",
   "throwError": "Throw error"
 }
