--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,5 +5,6 @@
   "ReloadThisPage": "Перезагрузить страницу",
   "SomethingWentWrong": "Что-то пошло не так...",
   "Translate": "Поменять язык",
+  "TranslateShort": "Ru",
   "throwError": "Вызвать ошибку"
 }
