Added UserLogin modal form
Added Modal dark story.
Fixed ThemeSwitcher.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,6 @@
   "SomethingWentWrong": "Something went wrong...",
   "Translate": "Change language",
   "TranslateShort": "En",
-  "throwError": "Throw error"
+  "throwError": "Throw error",
+  "Login": "Login"
 }
