Added Input UI component
Added stories for Input, LoginForm & LoginModal. Added lazy load to Modal,

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,5 +7,7 @@
   "Translate": "Change language",
   "TranslateShort": "En",
   "throwError": "Throw error",
-  "Login": "Login"
+  "Login": "Login",
+  "InputUsername": "Username",
+  "InputPassword": "Password"
 }
