--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,5 +7,7 @@
   "Translate": "Поменять язык",
   "TranslateShort": "Ru",
   "throwError": "Вызвать ошибку",
-  "Login": "Войти"
+  "Login": "Войти",
+  "InputUsername": "Логин",
+  "InputPassword": "Пароль"
 }
