Memoised components. Added Profile link. Updated Sidebar component.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
   "AboutPageLink": "About",
+  "ProfilePageLink": "Profile",
   "MainPage": "Main Page",
   "MainPageLink": "Main",
   "ReloadThisPage": "Reload this page",
