--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,6 @@
 {
   "AboutPageLink": "О сайте",
+  "ProfilePageLink": "Профиль",
   "MainPage": "Главная",
   "MainPageLink": "Главная",
   "ReloadThisPage": "Перезагрузить страницу",
