Updated Profile. Added ProfileCard. Enabled typescript strict mode.

--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -1,3 +1,6 @@
 {
-  "ProfilePage": "Profile Page"
+  "ProfilePage": "Profile Page",
+  "FirstNameLabel": "Firstname",
+  "LastNameLabel": "Lastname",
+  "ChangeBtn": "Change"
 }
