--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -1,3 +1,6 @@
 {
-  "ProfilePage": "Профиль"
+  "ProfilePage": "Профиль",
+  "FirstNameLabel": "Имя",
+  "LastNameLabel": "Фамилия",
+  "ChangeBtn": "Изменить"
 }
