--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -2,5 +2,13 @@
   "ProfilePage": "Profile Page",
   "FirstNameLabel": "Firstname",
   "LastNameLabel": "Lastname",
-  "ChangeBtn": "Change"
+  "UsernameLabel": "Username",
+  "AgeLabel": "Age",
+  "CityLabel": "City",
+  "AvatarLabel": "Avatar",
+  "ChangeBtn": "Change",
+  "CancelBtn": "Cancel",
+  "SaveBtn": "Save",
+  "ProfileLoadingErrorTitle": "Profile loading error",
+  "ProfileLoadingErrorText": "Try to reload page"
 }
