Added CountrySelect & CurrencySelect entities.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -13,5 +13,7 @@
   "InputUsername": "Username",
   "InputPassword": "Password",
   "LoginFormTitle": "Authorization",
-  "LoginErrorMessage": "Invalid username or password"
+  "LoginErrorMessage": "Invalid username or password",
+  "CurrencyLabel": "Currency",
+  "CountryLabel": "Country"
 }
