--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -10,5 +10,10 @@
   "CancelBtn": "Отменить",
   "SaveBtn": "Сохранить",
   "ProfileLoadingErrorTitle": "Ошибка при загрузке профиля",
-  "ProfileLoadingErrorText": "Попробуйте обновить страницу"
+  "ProfileLoadingErrorText": "Попробуйте обновить страницу",
+  "ServerError": "Ошибка сервера при сохранении изменений",
+  "NoDataError": "Данные не указаны",
+  "IncorrectCountryError": "Некорректный регион",
+  "IncorrectAgeError": "Некорректный возраст",
+  "IncorrectUserDataError": "Имя и фамилия обязательны"
 }
