Added features to add new comment, open profile from comment.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,5 +17,7 @@
   "LoginErrorMessage": "Invalid username or password",
   "CurrencyLabel": "Currency",
   "CountryLabel": "Country",
-  "NoCommentsMessage": "No comments"
+  "NoCommentsMessage": "No comments",
+  "InputNewCommentLabel": "Type comment",
+  "InputNewCommentSendBtn": "Send"
 }
