Added Article List component.

--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -2,5 +2,7 @@
   "ArticlesPage": "Articles",
   "ArticleNotFound": "Article not found!",
   "ArticleDetailsLoadingError": "Something went wrong when loading the article",
-  "CommentsBlockTitle": "Comments"
+  "CommentsBlockTitle": "Comments",
+  "BackToArticleListBtn": "Back to articles list",
+  "ContinueReadingBtn": "Continue reading..."
 }
