Added article recommendations.

--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -19,5 +19,6 @@
   "ITTabItemText": "IT",
   "JSTabItemText": "JS",
   "FoodTabItemText": "Food",
-  "NoArticlesFoundText": "Articles not found"
+  "NoArticlesFoundText": "Articles not found",
+  "RecommendationsBlockTitle": "Recommended articles"
 }
