--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -19,5 +19,6 @@
   "ITTabItemText": "IT",
   "JSTabItemText": "JS",
   "FoodTabItemText": "Еда",
-  "NoArticlesFoundText": "Статьи не найдены"
+  "NoArticlesFoundText": "Статьи не найдены",
+  "RecommendationsBlockTitle": "Рекомендуем статьи"
 }
