Added Pages (stubs) and links to create new and edit articles.

--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -20,5 +20,6 @@
   "JSTabItemText": "JS",
   "FoodTabItemText": "Food",
   "NoArticlesFoundText": "Articles not found",
-  "RecommendationsBlockTitle": "Recommended articles"
+  "RecommendationsBlockTitle": "Recommended articles",
+  "EditArticleBtn": "Edit"
 }
