--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -20,5 +20,6 @@
   "JSTabItemText": "JS",
   "FoodTabItemText": "Еда",
   "NoArticlesFoundText": "Статьи не найдены",
-  "RecommendationsBlockTitle": "Рекомендуем статьи"
+  "RecommendationsBlockTitle": "Рекомендуем статьи",
+  "EditArticleBtn": "Редактировать"
 }
