Updated CountrySelect and CurrencySelect with ListBox control.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -21,5 +21,7 @@
   "NoCommentsMessage": "No comments",
   "InputNewCommentLabel": "Type comment",
   "InputNewCommentSendBtn": "Send",
-  "CreateNewArticleLink": "Create new article"
+  "CreateNewArticleLink": "Create new article",
+  "SelectCountryDefaultValue": "Select country",
+  "SelectCurrencyDefaultValue": "select currency"
 }
