--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -21,5 +21,7 @@
   "NoCommentsMessage": "Комментарии отсутствуют",
   "InputNewCommentLabel": "Введите текст комментария",
   "InputNewCommentSendBtn": "Отправить",
-  "CreateNewArticleLink": "Создать новую статью"
+  "CreateNewArticleLink": "Создать новую статью",
+  "SelectCountryDefaultValue": "Выбирете страну",
+  "SelectCurrencyDefaultValue": "Выбирете валюту"
 }
