Added User roles. Added private routes with required roles.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,6 +2,7 @@
   "AppName": "Blog App",
   "AboutPageLink": "About",
   "ProfilePageLink": "Profile",
+  "AdminPanelLink": "Admin Panel",
   "MainPageLink": "Main",
   "ArticlesPageLink": "Articles",
   "MainPage": "Main Page",
