--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,6 +2,7 @@
   "AppName": "Blog App",
   "AboutPageLink": "О сайте",
   "ProfilePageLink": "Профиль",
+  "AdminPanelLink": "Админ панель",
   "MainPageLink": "Главная",
   "ArticlesPageLink": "Статьи",
   "MainPage": "Главная",
