Updated StarRating: added edit button, fixed style.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -24,5 +24,6 @@
   "InputNewCommentSendBtn": "Send",
   "CreateNewArticleLink": "Create new article",
   "SelectCountryDefaultValue": "Select country",
-  "SelectCurrencyDefaultValue": "select currency"
+  "SelectCurrencyDefaultValue": "select currency",
+  "StarRatingEditBtnText": "Edit"
 }
