--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -24,5 +24,6 @@
   "InputNewCommentSendBtn": "Отправить",
   "CreateNewArticleLink": "Создать новую статью",
   "SelectCountryDefaultValue": "Выбирете страну",
-  "SelectCurrencyDefaultValue": "Выбирете валюту"
+  "SelectCurrencyDefaultValue": "Выбирете валюту",
+  "StarRatingEditBtnText": "Изменить"
 }
