--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -28,5 +28,6 @@
   "StarRatingEditBtnText": "Изменить,",
   "FeedbackLabel": "Как вам статья?",
   "FeedbackCloseBtnText": "Закрыть",
-  "FeedbackSendBtnText": "Отправить"
+  "FeedbackSendBtnText": "Отправить",
+  "FeedbackSetDefaultTitle": "Спасибо за оценку!"
 }
